--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,7 +6,11 @@
         app:showAsAction="never"
         android:title="@string/settings"
         android:id="@+id/settings">
-
     </item>
+
+    <item
+        app:showAsAction="never"
+        android:title="Logout"
+        android:id="@+id/logout"/>
 
 </menu>
